fix full width page on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -36,6 +36,11 @@
 .breadcrumb {
     background: $background-color;
 }
+/* full width page */
+.full-background {
+    background: $nav-background;
+}
+
 /* narrow text block for page-narrow layout */
 .page-narrow {
     max-width: 700px;
